# lightning-whisper-mlx

./: .gitignore  AI_REVIEW_TEST_SUMMARY.md  CENTRALIZED_WORKFLOW_FIXES.md  CLAUDE.md  IMPROVED_SECURITY_PROMPT.md  README.md  SECURITY_PROMPT_COMPARISON.md  conftest.py  pyproject.toml  test_audio_cache_feature.py
.github/: ai-review-config.yml
.github/workflows/: ai-code-review.yml
examples/: example_usage.py
lightning_whisper_mlx/: audio.py  lightning.py  transcribe.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cache_behavior.py
