[project]
name = "lightning-whisper-mlx"
version = "0.0.10"
description = "An incredibly fast implementation of Whisper optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.1.0,<2.0.0",
    "mlx>=0.29.0,<1.0.0",
    "numba>=0.62.0,<1.0.0",
    "numpy>=2.3.0,<3.0.0",
    "torch>=2.9.0,<3.0.0",
    "tqdm>=4.67.0,<5.0.0",
    "more-itertools>=10.8.0,<11.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "scipy>=1.16.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lightning_whisper_mlx"]

[tool.hatch.build.targets.wheel.force-include]
"lightning_whisper_mlx/assets" = "lightning_whisper_mlx/assets"
